--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,13 @@ image: objectboxio/buildenv-android:2023-07-28 # Includes JDK 17.0.8
 # - ORG_GRADLE_PROJECT_signingPassword
 
 variables:
+  OBX_RELEASE:
+    value: "false"
+    options: [ "false", "true" ]
+    description: "Turns on the release flag in the Gradle root build script, which triggers building and publishing a
+                  release of the Gradle plugin artifacts to the internal GitLab repository and Maven Central.
+                  Consult the release checklist before turning this on."
+
   # Disable the Gradle daemon. Gradle may run in a Docker container with a shared
   # Docker volume containing GRADLE_USER_HOME. If the container is stopped after a job
   # Gradle daemons may get killed, preventing proper clean-up of lock files in GRADLE_USER_HOME.
@@ -98,8 +105,8 @@ publish-maven-central:linux:
     - linux
     - x64
   rules:
-    # Only on publish branch, only if no previous stages failed
-    - if: $CI_COMMIT_BRANCH == "publish"
+    # Only if release mode is on, only if no previous stages failed
+    - if: $OBX_RELEASE == "true"
       when: on_success
   script:
     # Note: can not use before_script for Chat notification as it would overwrite the one from .common (feel free to improve)
@@ -114,8 +121,8 @@ publish-maven-central:linux:
 trigger-integ-tests:
   stage: triggers
   rules:
-    # Not for publish branch, does not exist for integration tests
-    - if: $CI_COMMIT_BRANCH == "publish"
+    # Not when publishing a release
+    - if: $OBX_RELEASE == "true"
       when: never
     # Otherwise, only if no previous stages failed. Also set allow_failure in case branch does not exist downstream.
     - when: on_success
@@ -130,6 +137,9 @@ trigger-integ-tests:
 trigger-maven-plugin:
   stage: triggers
   rules:
+    # Not when publishing a release
+    - if: $OBX_RELEASE == "true"
+      when: never
     # Do not trigger publishing of Maven plugin
     - if: $CI_COMMIT_BRANCH == "publish"
       when: never
